--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Yummy Lasagna</a>
+    <h1>Yummy Lasagna</h1>
+    <a href="../index.html">Back to Home</a>
 </body>
 </html>
