--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Yummy Lasagna</h1>
     <a href="../index.html">Back to Home</a>
+    <img src="https://as2.ftcdn.net/v2/jpg/01/14/81/25/1000_F_114812552_bCNOW4RAY100Khp2T6WovOGbUXiXYk80.jpg" alt="Lasagna">
+    <h2>Description</h2>
+    <p>This is a delicious recipe for lasagna.</p>
+    <p>Very yummy</p>
 </body>
 </html>
