I add the steps for making lasagna.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,5 +12,16 @@
     <h2>Description</h2>
     <p>This is a delicious recipe for lasagna.</p>
     <p>Very yummy</p>
+    <ul>
+        <li>Tomatoes</li>
+        <li>Noodles</li>
+        <li>Cheese</li>
+    </ul>
+    <ol>
+        <li>Cook the noodles</li>
+        <li>Prepare the sauce</li>
+        <li>Layer noodles, sauce, and cheese</li>
+        <li>Bake in the oven</li>
+    </ol>
 </body>
 </html>
