--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Yummy Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Yummy Lasagna</a></li>
+        <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
+        <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+    </ul>
+
 </body>
 </html>
