--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Yummy Lasagna</a></li>
-        <li><a href="recipes/noodles.html">Yummy Spaghetti 2</a></li>
-        <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+        <li><a href="recipes/noodles.html">Yummy Spaghetti</a></li>
+        <li><a href="recipes/yourrecipe.html">Recipe Title</a></li>
     </ul>
 
 </body>
