--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Yummy Lasagna</a></li>
         <li><a href="recipes/noodles.html">Yummy Spaghetti</a></li>
-        <li><a href="recipes/yourrecipe.html">Recipe Title</a></li>
+        <li><a href="recipes/soup.html">Yummy Soup</a></li>
     </ul>
 
 </body>
