A bit better CSS

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Yummy Lasagna</h1>
+    <h1 class="recipe">Yummy Lasagna</h1>
     <a href="../index.html">Back to Home</a>
     <img src="https://as2.ftcdn.net/v2/jpg/01/14/81/25/1000_F_114812552_bCNOW4RAY100Khp2T6WovOGbUXiXYk80.jpg" alt="Lasagna">
     <h2>Description</h2>
