--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Yummy Spaghetti</h1>
+    <h1 class="recipe">Yummy Spaghetti</h1>
     <a href="../index.html">Back to Home</a>
     <img src="https://images.pexels.com/photos/4936945/pexels-photo-4936945.jpeg" alt="Noodles" width="600" height="600">
     <h2>Description</h2>
