--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Yummy Soup</h1>
+    <h1 class="recipe">Yummy Soup</h1>
     <a href="../index.html">Back to Home</a>
     <img src="https://images.pexels.com/photos/539451/pexels-photo-539451.jpeg?cs=srgb&dl=pexels-foodie-factor-162291-539451.jpg&fm=jpg" alt="Noodles"q width="800" height="600">
     <h2>Description</h2>
